src/test/deca/context/invalid/our_tests/jb-DoubleDef-param.deca
// Description:
//    Two parameters with same name
//
// Resultats:
//    Should throw Contextual error (rule 3.17)
//
// Historique:
//    cree le 22/01/2017

class A {
    void f(int a, float a) {}
}
